# cli-helper

./:  README.md  .gitignore  README.md
python-backend/: app.py  cli_history.txt  pyproject.toml
python-backend/cache/: cache.db  cache.db-shm  cache.db-wal
python-backend/tests/: test_app.py
src/: extension.js  extension.ts  package-lock.json  package.json  tsconfig.json
src/scripts/: postinstall.js
